# ft_ality

./: .gitignore  Dockerfile  Makefile  README  dune-project  ft_ality.opam  result
_build/: log
grammar/: MK_SubZero.gmr  SC_Xiang.gmr  SF_Ryu.gmr  inherit_before.gmr  test.gmr
grammar/invalid/: corupted.gmr  map-same-key-line-3.gmr  missing-combo-line-5.gmr  missing-combo-name-line-5.gmr  missing-key-line-3.gmr  missing-move-line-3.gmr  not-a-config.gmr  same-combo-line-6.gmr  unknown-action-line-5.gmr
lib/: dune
srcs/: Makefile  dune-project  ft_ality.opam
srcs/grammar/: SF_Ryu.gmr  inherit_after.gmr
test/: dune
tmp/: README  junk.ml  sdl_tests.ml  tmp.txt
